styles.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --black: #000;
  --transparent-black: #000000ce;
  --dark-green: #073f07;
  --red: #a40d0d;
  --white: #fff;
  --light-grey: #efefef;
  --grey: #ebe9e9;
  --dark-grey: #434242;
  --light-grey-border: 1px solid var(--light-grey);
  --thicker-grey-border: 2px solid var(--light-grey);
}

main {
  width: 90%;
  margin: auto;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;
}

@media (min-width: 960px) {
  main {
    align-items: normal;
    flex-direction: row;
    justify-content: space-evenly;
  }
}

img {
  border-radius: 10px;
  cursor: pointer;
}

button {
  cursor: pointer;
}

hr {
  border: var(--light-grey-border);
}

.lightbox {
  display: none;
  z-index: 1;
}

.lightbox img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 80%;
  width: 90%;
}

@media (min-width: 768px) {
  .lightbox img {
    width: 40%;
  }
}

.lightbox-btn {
  border: none;
  border-radius: 50%;
  color: var(--white);
  font-size: 1.7rem;
  position: absolute;
}

.lightbox .close-btn,
.arrow {
  border: none;
  background-color: var(--black);
  padding: 5px 10px;
}

.lightbox .close-btn {
  font-size: 1.4rem;
  top: 10px;
  right: 10px;
}

.arrow {
  top: 50%;
  z-index: 1;
  transform: translate(-50%, -50%);
}

.left-arrow {
  width: 50px;
  left: 40px;
}

.right-arrow {
  right: 0;
}

header {
  margin: 15px 5px;
}

@media (min-width: 960px) {
  header {
    display: flex;
    align-items: center;
  }
}

.desktop-nav ul {
  display: none;
  gap: 10px;
  list-style-type: none;
}

@media (min-width: 960px) {
  .desktop-nav ul {
    display: flex;
  }
}

.brand-name {
  margin: 0 20px;
}

.nav-link {
  color: var(--black);
  text-decoration: none;
}

.nav-link:hover {
  text-decoration: underline;
}

.hamburger-btn {
  position: absolute;
  top: 20px;
  right: 15%;
  background: none;
  border: none;
}

.hamburger-menu,
.cart-container,
.lightbox {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100vh;
  background-color: var(--transparent-black);
}

.cart-container {
  display: none;
  z-index: 1;
}

.hamburger-menu {
  left: 0;
  display: none;
}

.mobile-nav,
.cart-sidepanel {
  background-color: var(--white);
}

.cart-sidepanel {
  width: 80%;
  height: 100vh;
  padding: 10px;
  position: absolute;
  right: 0;
}

@media (min-width: 768px) {
  .cart-sidepanel {
    width: 500px;
  }
}

.cart-sidepanel h2 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.total-items-in-cart {
  display: none;
  font-size: 0.9rem;
  padding: 5px 10px;
  border-radius: 50%;
  background-color: var(--black);
  color: var(--light-grey);
}

.cart-sidepanel hr {
  margin: 10px 0;
}

.sidepanel-msg {
  font-size: 1.2rem;
}

.msg-and-continue-shopping-btn-container {
  width: 80%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.filled-cart-container {
  display: none;
}

.item-price-container .item-name,
.current-item-total {
  font-size: 1.2rem;
  font-weight: 600;
}

.trash-can-btn {
  border: none;
  background: none;
  margin-top: 5px;
}

.trash-can-icon {
  fill: var(--red);
}

.flex-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 15px 0;
}

.bottom-container {
  width: 100%;
  padding: 20px;
  position: absolute;
  bottom: 50px;
}

.subtotal-shipping-container p:first-of-type {
  font-size: 1.1rem;
  font-weight: 700;
}

.continue-shopping-btn,
.checkout-btn {
  margin-top: 15px;
  font-size: 1.1rem;
  padding: 10px;
  border: none;
  border-radius: 5px;
}

.continue-shopping-btn {
  background-color: var(--black);
  color: var(--light-grey);
}

.continue-shopping-btn:hover {
  filter: opacity(0.8);
}

.checkout-btn {
  background-color: var(--light-grey);
}

.checkout-btn:hover {
  background-color: var(--grey);
}

.fill-cart-btn {
  display: block;
  width: 100%;
}

.mobile-nav {
  width: 50%;
  position: relative;
  transition: ease 0.5s;
}

.close-btn {
  position: absolute;
  top: 0;
  right: 0;
  padding: 5px;
  border: var(--thicker-grey-border);
  background: none;
  font-size: 1.2rem;
}

.mobile-nav ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding-top: 10px;
  margin-left: 10px;
  height: 100vh;
}

.mobile-nav ul li {
  font-size: 1.3rem;
}

.shopping-cart-btn {
  background-color: transparent;
  border: none;
}

.shopping-cart-icon {
  position: absolute;
  top: 25px;
  right: 25px;
}

@media (min-width: 960px) {
  .shopping-cart-icon {
    right: 15px;
  }

  .hamburger-menu,
  .hamburger-icon {
    display: none;
  }
}

.featured-images-container {
  display: flex;
  flex-direction: column;
}

@media (min-width: 1200px) {
  .product-info-container,
  .featured-images-container {
    max-width: 50%;
  }
}

.featured-img {
  width: 100%;
  max-height: 600px;
  margin-bottom: 20px;
}

.thumbnail-img-container {
  display: flex;
  gap: 10px;
  width: 80%;
}

@media (min-width: 768px) {
  .featured-images-container {
    width: 50%;
  }

  .featured-img {
    max-width: 600px;
  }
}

@media (min-width: 1200px) {
  .thumbnail-img-container {
    margin: auto;
  }
}

.highlighted {
  border: 5px solid var(--dark-green);
}

.thumbnail {
  height: 200px;
}

.thumbnail:hover:not(.highlighted) {
  filter: opacity(0.5);
}

.title {
  margin-top: 20px;
  font-size: 1.875rem;
}

.total-reviews {
  margin: 10px 0 15px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.star {
  width: 20px;
  height: 20px;
}

.review-text,
small {
  color: var(--dark-grey);
}

.price {
  font-size: 1.5rem;
  font-weight: 700;
}

small {
  display: inline-block;
  margin: 15px 0;
}

.quantity-label {
  margin-top: 10px;
  font-size: 1.2rem;
  font-weight: 900;
}

.quantity-btn-container {
  display: flex;
  justify-content: space-evenly;
  border: var(--thicker-grey-border);
  border-radius: 5px;
  padding: 5px;
  margin: 15px 0;
  width: 100px;
}

.quantity-btn-container button {
  background: transparent;
  border: none;
  font-size: 1.2rem;
}

.decrement-btn {
  margin-top: -5px;
}

.cart-wishlist-container {
  display: flex;
  justify-content: start;
  align-items: center;
  gap: 10px;
}

.add-to-cart-btn,
.wishlist-btn {
  width: 200px;
  font-size: 1.1rem;
  padding: 10px 0;
  border: none;
  border-radius: 6px;
  flex-basis: 50%;
}

.cart-wishlist-container button svg {
  position: relative;
  top: 0.15em;
  margin-right: 5px;
}

.add-to-cart-btn {
  color: var(--light-grey);
  background-color: var(--black);
}

.add-to-cart-btn:hover {
  background-color: var(--transparent-black);
}

.wishlist-btn {
  color: var(--black);
  background-color: var(--light-grey);
  margin: 15px 0;
}

.wishlist-btn:hover {
  background-color: var(--grey);
}

.add-to-cart-btn svg {
  fill: var(--light-grey);
}

.tab-list {
  display: flex;
  justify-content: space-evenly;
  padding: 5px;
  border-radius: 5px;
  background-color: var(--grey);
  margin-bottom: 10px;
}

.tab-list button {
  font-size: 1.1rem;
  padding: 5px 25px;
  border: none;
  background: none;
}

button[aria-selected="true"] {
  background-color: var(--white);
}

.tab-section p {
  line-height: 1.5rem;
  font-size: 1.1rem;
  margin: 15px 0;
}

.spec-list {
  border: var(--thicker-grey-border);
  border-radius: 5px;
  list-style-type: none;
  padding: 5px;
  position: relative;
}

.spec-list li {
  padding: 10px;
}

.spec-list li:not(:last-of-type) {
  border-bottom: var(--thicker-grey-border);
}

.spec-topic {
  font-weight: 600;
}

.spec-description {
  position: absolute;
  right: 10px;
}

.tab-section:last-of-type {
  border-radius: 15px;
  border: var(--thicker-grey-border);
  padding: 10px;
}

.review-container:first-of-type {
  border-bottom: var(--thicker-grey-border);
}

.name-star-container {
  display: flex;
  align-items: center;
  gap: 10px;
}

.reviewer {
  font-weight: 700;
}

